# Search_Engine

./: CMakeLists.txt  README.md  Search_Engine_proba.cpp
JSON_files/: answers.json  config.json  requests.json
JSON_files/resources/: file001.txt
Tests/: Tests.h
include/: ConverterJSON.h  InvertedIndex.h
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
